# docky

./: CONTRIBUTING.md  Cargo.toml  FEATURES.md  README.md
.config/docky/: apps.json
src/: main.rs
